--- a/Projetos pessoais/005/estilos/style.css
+++ b/Projetos pessoais/005/estilos/style.css
@@ -3,6 +3,7 @@
 :root{
     --roxo: rgb(137, 52, 158);
     --rosa: rgb(201, 42, 116);
+    --azul: #87aaeb;
 }
 *{
     padding: 0px;
@@ -27,7 +28,7 @@ section#login{
 
     background-color: white;
     width: 280px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.295);
@@ -53,13 +54,38 @@ div#formulario p{
     line-height: 1.4em;
     margin-bottom: 10px;
 }
+div.campo{
+    padding: 2px;
+    background-image: linear-gradient(to right, var(--azul), var(--roxo));
+    margin: 3px 0px;
+    border-radius: 8px;
+}
+div.campo span{
+    color: white;
+    font-size: 1.6em;
+    transform: translate(0px, 3px);
+}
+input#iusu{
+    width: calc(100% - 33px);
+    border: none;
+    padding: 5px;
+    border-radius: 5px;
+    transform: translate(0px, -5px);
+}
+input#isenha{
+    padding: 5px;
+    border-radius: 5px;
+    width: calc(100% - 33px);
+    border: none;
+    transform: translate(0px, -5px);
+}
 input#entrar{
     display: block;
     margin: 10px 0px;
     width: 100%;
     padding: 10px;
     border: none;
-    background-color: rgb(135, 170, 235);
+    background-color: var(--azul);
     border-radius: 8px;
     font-size: 1.1em;
 }
@@ -72,7 +98,7 @@ input#entrar:hover{
 a.botao{
     display: block;
     background-color: white;
-    border: 1px solid rgb(135, 170, 235);
+    border: 1px solid var(--azul);
     padding: 10px;
     font-size: 1.1em;
     text-align: center;
