--- a/Projetos pessoais/005/estilos/style.css
+++ b/Projetos pessoais/005/estilos/style.css
@@ -9,7 +9,7 @@
     padding: 0px;
     margin: 0px;
     font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
+    box-sizing: border-box; /*IMPORTANTE*/
 }
 body, html{
     height: 100vh;
