--- a/Projetos pessoais/005/estilos/query2.css
+++ b/Projetos pessoais/005/estilos/query2.css
@@ -3,12 +3,13 @@
 @media screen and (min-width: 768px) and (max-width: 992px) {
     section#lembrar{
         width: 80vw;
+        height: 280px;
     }
     div#img{
         float: right;
         width: 40%;
         height: 100%;
-        background: skyblue url('../imagens/paisagem2.jpg') no-repeat center center;
+        background: skyblue url('../imagens/paisagem2.jpg') no-repeat bottom center;
         background-size: cover;
     }
     div#formulario{
@@ -23,13 +24,14 @@
         box-shadow: none;
     }
     div#formulario p{
-        font-size: 1.2em;
+        font-size: 1.05em;
     }
 }
 
 @media screen and (min-width: 992px) {
     section#lembrar{
         width: 992px;
+        height: 300px;
     }
     div#img{
         float: left;
