--- a/Projetos pessoais/006/estilos/style.css
+++ b/Projetos pessoais/006/estilos/style.css
@@ -4,6 +4,9 @@
     padding: 0px;
     margin: 0px;
 }
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 main{
     height: 100vh;
     width: 100vw;
@@ -16,4 +19,12 @@ main section{
     border-radius: 10px;
     margin: auto;
     width: 300px;
+}
+section div#visor{
+    margin: auto;
+    background-color: green;
+    height: 30px;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1.2em;
 }
